add image post repo and edit on docker compose for image version and make it const and stable refactor some thing like transactional and turn all the component and inject them into constructor and remove all autowired and add async and add some documentation and integration with completable future remove api from api mapping make some mongo document null value for list specifically add the post service impl