@@ -7,9 +7,10 @@ import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
+import java.util.concurrent.CompletableFuture;
 
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
@@ -24,12 +25,10 @@ import com.webapp.madrasati.school.repository.SchoolRepository;
 import com.webapp.madrasati.school.service.SchoolImageService;
 
 @Service
-@Transactional
 public class SchoolImageServicesimp implements SchoolImageService {
 
-    private SchoolImageRepository schoolImageRepository;
-    private SchoolRepository schoolRepository;
-
+    private final SchoolImageRepository schoolImageRepository;
+    private final SchoolRepository schoolRepository;
     private String location;
 
     SchoolImageServicesimp(SchoolImageRepository schoolImageRepository, SchoolRepository schoolRepository,
@@ -39,7 +38,9 @@ public class SchoolImageServicesimp implements SchoolImageService {
         this.schoolRepository = schoolRepository;
     }
 
-    public String uploadCoverImage(MultipartFile file, UUID schoolId) {
+    @Async("taskExecutor")
+    @Transactional(rollbackFor = { BadRequestException.class, InternalServerErrorException.class, IOException.class })
+    public CompletableFuture<String> uploadCoverImage(MultipartFile file, UUID schoolId) {
         try {
             if (file.isEmpty()) {
                 throw new BadRequestException("File is empty");
@@ -58,14 +59,16 @@ public class SchoolImageServicesimp implements SchoolImageService {
             String relativePath = "images/school/cover_image/" + schoolId;
             schoolRepository.updateSchoolCoverImage(relativePath, schoolId);
 
-            return relativePath;
-        } catch (Exception e) {
-            LoggerApp.error(e.getMessage());
+            return CompletableFuture.completedFuture(relativePath);
+        } catch (IOException | NullPointerException e) {
+            LoggerApp.error("Error while uploading cover image", e);
             throw new InternalServerErrorException(e.getMessage());
         }
     }
 
-    public void uploadSchoolImages(MultipartFile[] files, UUID schoolId) {
+    @Async("taskExecutor")
+    @Transactional(rollbackFor = { BadRequestException.class, InternalServerErrorException.class, IOException.class })
+    public CompletableFuture<String> uploadSchoolImages(MultipartFile[] files, UUID schoolId) {
         try {
             if (files.length == 0) {
                 throw new BadRequestException("File is empty");
@@ -84,17 +87,18 @@ public class SchoolImageServicesimp implements SchoolImageService {
                             .imagePath(uploadDir)
                             .school(school)
                             .build())
-                    .collect(Collectors.toList());
+                    .toList();
             List<SchoolImage> savedImages = schoolImageRepository.saveAllAndFlush(schoolImages);
 
             for (int i = 0; i < files.length; i++) {
                 Path filePath = pathDir.resolve(savedImages.get(i).getId().toString());
                 Files.write(filePath, files[i].getBytes());
             }
+            return CompletableFuture.completedFuture("inserted successfully");
 
-        } catch (IOException e) {
+        } catch (IOException | NullPointerException e) {
             LoggerApp.error(e.getMessage());
-            throw new InternalServerErrorException(e.getMessage());
+            throw new InternalServerErrorException("Error while uploading school images", e);
         }
     }
 }
