@@ -7,10 +7,12 @@ import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.concurrent.CompletableFuture;
 
+import com.webapp.madrasati.school_group.repository.ImagePostRepository;
 import org.bson.types.ObjectId;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
@@ -22,33 +24,38 @@ import com.webapp.madrasati.core.error.ResourceNotFoundException;
 import com.webapp.madrasati.school_group.model.Group;
 import com.webapp.madrasati.school_group.model.GroupPost;
 import com.webapp.madrasati.school_group.model.ImagePost;
-import com.webapp.madrasati.school_group.model.dto.req.GroupPostDto;
+import com.webapp.madrasati.school_group.model.dto.res.PostResponseBodyDto;
 import com.webapp.madrasati.school_group.repository.GroupPostRepository;
 import com.webapp.madrasati.school_group.repository.GroupRepository;
 
 @Service
-@Transactional(rollbackFor = { ResourceNotFoundException.class, InternalServerErrorException.class })
 public class CreatePostService {
-    private GroupPostRepository groupPostRepository;
-    private GroupRepository groupRepository;
-    private UserIdSecurity userId;
-    private String location;
+    private final GroupPostRepository groupPostRepository;
+    private final GroupRepository groupRepository;
+    private final ImagePostRepository imagePostRepository;
+    private final UserIdSecurity userId;
+    private final String location;
 
     public CreatePostService(GroupPostRepository groupPostRepository, GroupRepository groupRepository,
-            UserIdSecurity userIdSecurity, @Value("${upload_dir}") String location) {
+            UserIdSecurity userIdSecurity, ImagePostRepository imagePostRepository,
+            @Value("${upload_dir}") String location) {
         this.location = location;
         this.userId = userIdSecurity;
         this.groupPostRepository = groupPostRepository;
         this.groupRepository = groupRepository;
+        this.imagePostRepository = imagePostRepository;
     }
 
-    public String createPost(MultipartFile[] files, GroupPostDto groupPostDto, String groupIdString) {
+    @Async("taskExecutor")
+    @Transactional(rollbackFor = { ResourceNotFoundException.class, InternalServerErrorException.class })
+    public CompletableFuture<PostResponseBodyDto> createPost(MultipartFile[] files, String caption,
+            String groupIdString) {
+
         ObjectId groupId = new ObjectId(groupIdString);
         Group group = groupRepository.findById(groupId)
                 .orElseThrow(() -> new ResourceNotFoundException("Group not found"));
         try {
             List<ImagePost> imagesPost = new ArrayList<>();
-
             if (files.length != 0) {
                 final String uploadDir = location + "images/groups/" + groupId + "/posts";
                 Path directory = Paths.get(uploadDir);
@@ -60,23 +67,36 @@ public class CreatePostService {
                                 .imageName(file.getOriginalFilename())
                                 .imagePath(uploadDir)
                                 .build())
-                        .collect(Collectors.toList());
+                        .toList();
+
+                imagePostRepository.saveAll(imagesPost);
+
                 for (int i = 0; i < files.length; i++) {
                     Path filePath = directory.resolve(imagesPost.get(i).getId().toString());
                     Files.write(filePath, files[i].getBytes());
                 }
-            }
 
-            GroupPost post = groupPostRepository
-                    .save(GroupPost.builder().caption(groupPostDto.getCaption()).imagePost(imagesPost).authorId(
-                            userId.getUId()).build());
+            }
+            GroupPost post = groupPostRepository.save(
+                    GroupPost.builder()
+                            .caption(caption)
+                            .imagePost(imagesPost)
+                            .authorId(userId.getUId()).build());
+
             group.getGroupPostIds().add(post.getId());
+
             groupRepository.save(group);
-            return "Post created successfully";
+
+            PostResponseBodyDto postResponseBodyDto = PostResponseBodyDto.builder().authorId(post.getAuthorId())
+                    .caption(post.getCaption())
+                    .imagePost(post.getImagePost())
+                    .build();
+
+            return CompletableFuture.completedFuture(postResponseBodyDto);
+
         } catch (IOException | IllegalArgumentException e) {
             LoggerApp.error(e.getMessage());
-            throw new InternalServerErrorException(e.getMessage());
+            throw new InternalServerErrorException("Something went wrong while creating post", e);
         }
     }
 }
-// update the grop and add post
